--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button onclick="filterByCategory('borse')">👜 Borselli</button>
     <button onclick="filterByCategory('scarpe')">👟 Scarpe</button>
     <button onclick="filterByCategory('accessori')">🎯 Accessori</button>
-    <button onclick="filterByCategory('buono')"> <!DOCTYPE html>
+    <button onclick="filterByCategory('buono')">🎁 Buoni Regalo<!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
