--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <button onclick="filterByCategory('borse')">👜 Borselli</button>
     <button onclick="filterByCategory('scarpe')">👟 Scarpe</button>
     <button onclick="filterByCategory('accessori')">🎯 Accessori</button>
-    <button onclick="filterByCategory('buono')">🎁 Buoni Regalo<!DOCTYPE html>
+    <button onclick="filterByCategory('buono')">🎁 Buoni Regalo</button>
+</nav>
+  
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
